--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,8 +51,9 @@ flutter {
 }
 
 dependencies {
-    androidTestCompile 'com.android.support:support-annotations:25.4.0'
-    androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile 'com.android.support.test:rules:0.5'
-    compile 'org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.2-4'
+    androidTestCompile 'com.android.support:support-annotations:27.0.2'
+    androidTestCompile 'com.android.support.test:runner:1.0.1'
+    androidTestCompile 'com.android.support.test:rules:1.0.1'
+    compile 'org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.51'
+    apply plugin: 'com.google.gms.google-services'
 }
